BM-1191 Error 500 vid sie-export